@@ -48,6 +48,9 @@
 	/* enable hardware crypto built into CPU, if available */
 	enable_cpuhwcrypto();
 	
+	/* load optional kernel modules */
+	load_kernel_modules();
+	
 	/* automatically reassign interfaces if necessary */
 	interfaces_autoreassign();
 	
